--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,24 +10,28 @@
 main:
   - title: "Publications"
     url: /publications/
+    classes: "nav-push-right"
 
-  - title: "Talks"
-    url: /talks/    
+ # - title: "Talks"
+ #   url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+ # - title: "Teaching"
+ #   url: /teaching/    
     
   - title: "Portfolio"
     url: /portfolio/
+    classes: "nav-push-right"
         
   - title: "Blog Posts"
     url: /year-archive/
+    classes: "nav-push-right"
     
-  - title: "CV"
+  - title: "About/CV"
     url: /cv/
+    classes: "nav-push-right"
     
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  #- title: "Guide"
+  #  url: /markdown/
